--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,37 @@
     <string name="app_name">MojProjekat</string>
 
     <string name="drawer_header_text">Ime i prezime</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="action_new">Add new</string>
+    <string name="action_delete">Delete</string>
+    <string name="action_accept">Accept</string>
+    <string name="action_cancel">Cancel</string>
+
+
+    <string name="pref_sync_title">Allow Sync</string>
+    <string name="pref_sync_summ">Allow app to sync data automatically, when wifi is avalible</string>
+    <string name="pref_sortBy">Sort by</string>
+    <string name="pref_radiusConnectionType">Radius lookup</string>
+
+    <string name="pref_sort_post">pref_sort_post</string>
+    <string name="pref_sort_comment">pref_sort_comment</string>
+    <string name="pref_sync">pref_sync</string>
+
+
+    <string name="notifications">Notifications</string>
+    <string name="notif_on_my_review">On my reviews</string>
+    <string name="notif_on_my_comment">On my comments</string>
+    <string name="notif_on_my_review_key">notif_on_my_review</string>
+    <string name="notif_on_my_comment_key">notif_on_my_comment</string>
+    <string name="notif_on_my_review_summ">Send you notifications on reviews that you have created after sync</string>
+    <string name="notif_on_my_comment_summ">Send you notifications on reviews that you have ccommented after sync</string>
+
+    <string name="notif_on_sync_key">notif_on_sync</string>
+    <string name="notif_on_sync_summ">Send you notifications about sync</string>
+    <string name="notif_on_sync_title">Sync notifications</string>
+
+
+
 </resources>
